--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,28 +1,76 @@
 body {
-  background: #800020;
+	background: #2EC4B6;
 }
+
 .centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
+
 .form-container {
-  background-color: #d6d1b5;
-  margin: 40% 20%;
+	background-color: #fff;
+	margin: 40% 20%;
 }
+
+.form-container:hover {
+	box-shadow: 5px 5px 2.5px #000;
+}
+
 .form-row {
-  padding: 75px 0;
+	padding: 75px 0;
 }
-.navbar{
-  margin-bottom: 10%;
-  border: none;
-  background: #fff;
+
+.btn-cus {
+	color: #fff;
+	background-color: #2EC4B6;
 }
+
+.container-fluid {
+	margin: 0 9%;
+}
+
+.navbar {
+	border-radius: 0; margin-bottom : 10%;
+	border: none;
+	margin-bottom: 10%;
+}
+
+.navbar-default .navbar-brand {
+	color: #000;
+}
+
+.navbar-default .navbar-nav>li>a {
+	color: #000;
+}
+
 #main-body {
-  min-height: 500px;
-  background: #fff;
+	background: #fff;
 }
-table {
-  text-align: center;
+
+.table {
+	margin-bottom: 0;
+	text-align: center;
+}
+
+.table>thead>tr>th {
+	background-color: #797373;
+	color: #fff; border-right : 2px solid #ddd;
+	text-align: center;
+	border-right: 2px solid #ddd;
+}
+
+.table>thead>tr>th:LAST-CHILD {
+	border-right: 0;
+}
+
+.table>tbody>tr>td {
+	background-color: #EEEEEE; border-right : 2px solid #ddd;
+	text-align: center;
+	border-right: 2px solid #ddd;
+}
+
+.table>tbody>tr>td:LAST-CHILD {
+	border-right: 0;
 }
