--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,5 +1,6 @@
 body {
 	background: #2EC4B6;
+	text-transform: capitalize;
 }
 
 .centered {
@@ -15,7 +16,7 @@ body {
 }
 
 .form-container:hover {
-	box-shadow: 5px 5px 2.5px #000;
+	box-shadow: 5px 5px 2.5px #e7e7e7;
 }
 
 .form-row {
@@ -46,7 +47,8 @@ body {
 }
 
 #main-body {
-	background: #fff;
+	background: #EEEEEE;
+	margin-bottom: 10%;
 }
 
 .table {
@@ -62,11 +64,13 @@ body {
 }
 
 .table>thead>tr>th:LAST-CHILD {
+	width: 14%;
 	border-right: 0;
 }
 
 .table>tbody>tr>td {
-	background-color: #EEEEEE; border-right : 2px solid #ddd;
+	background-color: #EEEEEE; 
+	border-right : 2px solid #ddd;
 	text-align: center;
 	border-right: 2px solid #ddd;
 }
@@ -83,4 +87,32 @@ body {
 .btn-danger {
 	background-color: #000;
 	border-color: #000;
+}
+
+.btn-success:hover .btn-success:focus {
+	background-color: #12a597;
+	border-color: #12a597;
+}
+
+.btn-danger:hover .btn-danger:focus {
+	background-color: gray;
+    border-color: #000;
+    color: #fff;
+}
+
+.empty-fields {
+	font-style: italic;
+    color: #5d5757;
+}
+.reimb-form {
+	background: #e7e7e7;
+    padding: 5% 0;
+}
+
+#form-approve {
+	float: left;
+}
+
+#form-deny {
+	float: right;
 }
