--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,7 +1,11 @@
+* {
+	font-family: 'Lato', sans-serif;
+}
 body {
 	/* 	background-image: url(skyscraper.jpg);
     background-size: cover; */
-	background-color: #2b4e7f;
+    color: #fff;
+	background-color: #e7e7e7;
 	text-transform: capitalize;
 }
 
@@ -13,7 +17,7 @@ body {
 }
 
 .form-container {
-	background-color: #fff;
+	background-color: #d33f2d;
 	margin: 40% 20%;
 }
 
@@ -30,8 +34,8 @@ button:hover {
 }
 
 .btn-cus {
-	color: #fff;
-	background-color: #2b4e7f;
+	color: #000;
+	background-color: #c0c1c5;
 }
 
 .container-fluid {
@@ -140,4 +144,18 @@ button:hover {
 
 #form-deny {
 	float: right;
+}
+
+#error {
+	width: 100%;
+}
+.error-container {
+	margin-top: 5%;
+}
+.btn-error {
+	border-radius: 0;
+	color: #fff;
+	background-color: #d33f2d;
+	width: 100%;
+	height: 40px;
 }
